Fix problem with wrong resizing on mobile devices

--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@ h1 {
     color: var(--secondary-color);
 }
 
-.levels {
-    display: flex;
-}
-
 .start-page.hide {
     display: none;
 }
@@ -29,4 +25,9 @@ h1 {
 .level {
     border: 2px solid var(--primary-color);
     border-radius: 6px;
+}
+
+canvas {
+    max-width: 100dvw;
+    max-height: 100dvh;
 }
